--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@ limitations under the License.
     <checksum-maven-plugin.version>1.11</checksum-maven-plugin.version>
     <dropwizard-metrics.version>4.1.18</dropwizard-metrics.version>
     <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
-    <flume-bom.version>1.11.1-SNAPSHOT</flume-bom.version>
+    <flume.version>1.11.0</flume.version>
     <junit.version>4.13.2</junit.version>
     <kafka.version>3.4.0</kafka.version>
     <log4j.version>2.20.0</log4j.version>
@@ -63,10 +63,18 @@ limitations under the License.
     <dependencies>
       <dependency>
         <groupId>org.apache.flume</groupId>
-        <artifactId>flume-dependencies</artifactId>
-        <version>${flume-bom.version}</version>
-        <scope>import</scope>
-        <type>pom</type>
+        <artifactId>flume-ng-core</artifactId>
+        <version>${flume.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.flume</groupId>
+        <artifactId>flume-ng-sdk</artifactId>
+        <version>${flume.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.flume</groupId>
+        <artifactId>flume-ng-configuration</artifactId>
+        <version>${flume.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.flume</groupId>
