--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,12 @@ limitations under the License.
     <dropwizard-metrics.version>4.1.18</dropwizard-metrics.version>
     <findsecbugs-plugin.version>1.12.0</findsecbugs-plugin.version>
     <flume.version>1.11.0</flume.version>
+    <jackson.version>2.17.0</jackson.version>
     <junit.version>4.13.2</junit.version>
-    <kafka.version>3.4.0</kafka.version>
-    <log4j.version>2.20.0</log4j.version>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <kafka.version>3.7.0</kafka.version>
+    <log4j.version>2.23.0</log4j.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <mockito.version>1.9.0</mockito.version>
     <module.name>org.apache.flume.kafka</module.name>
     <mvn-gpg-plugin.version>1.6</mvn-gpg-plugin.version>
@@ -54,10 +55,10 @@ limitations under the License.
     <rat.version>0.12</rat.version>
     <scala.version>2.13</scala.version>
     <scala-library.version>2.13.9</scala-library.version>
-    <slf4j.version>1.7.32</slf4j.version>
+    <slf4j.version>1.7.36</slf4j.version>
     <spotbugs-maven-plugin.version>4.7.2.1</spotbugs-maven-plugin.version>
     <spotless-maven-plugin.version>2.27.2</spotless-maven-plugin.version>
-    <zookeeper.version>3.6.2</zookeeper.version>
+    <zookeeper.version>3.9.2</zookeeper.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -215,6 +216,11 @@ limitations under the License.
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jackson.version}</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
